testdata/test/resources/com/yafred/asn1/test/should_fail/type_not_found.asn
-- FAILS: type not found

My-Module DEFINITIONS ::=


BEGIN

My-Type ::= My-Integer

END
